# Personal-Assistant

./: .gitignore  DEPLOY.md  Dockerfile  MOBILE.md  RAILWAY_DEPLOY.md  README.md  USER_GUIDE.md  VPA.txt  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-minimal.txt  requirements.txt  run.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/app/api/routes/: assistant.py  transcripts.py  websocket.py
backend/app/api/routes/frontend/components/: IntegrationSettings.tsx
backend/app/models/: __init__.py  transcript.py  user.py
backend/app/schemas/: __init__.py  assistant.py  transcript.py
backend/app/services/: __init__.py  ai_pipeline.py  asr.py  diarization.py  integrations.py  llm.py  mcp_server.py  pii.py  pipeline.py  rag.py
backend/app/tasks/: transcription.py
frontend/: capacitor.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AssistantView.tsx  TranscriptionView.tsx  TranscriptionView_new.tsx
frontend/public/: meetscribe.html
